--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,9 @@
-<h1>hello world</h1>
+<div id="content-index">
+    <h3>Search for jobs</h3>
+    <div id="search-form">
+        <form action="/jobs" method="get">
+            <input type="text" name="search-query" size="70">
+            <input type="submit" value="Search">
+        </form>
+    </div>
+</div>
