--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,15 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <div id="container">{{{body}}}</div>
+        <div id="container">
+            <div id="navbar">
+                <h1>myJobs</h1>
+                <div><a href="/login">Login</a></div>
+            </div>
+            {{{body}}}
+            {{!-- <div id="footer">
+                <p>2022 Olegs Maklecovs</p>
+            </div> --}}
+        </div>
     </body>
 </html>
