--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <body>
         <div id="container">
             <div id="navbar">
-                <h1>myJobs</h1>
+                <a href="/" id="nav-title"><h1>myJobs</h1></a>
                 <div><a href="/login">Login</a></div>
             </div>
             {{{body}}}
