--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,10 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <div id="container">
-            <div id="navbar">
-                <a href="/" id="nav-title"><h1>myJobs</h1></a>
-                <div><a href="/login">Login</a></div>
-            </div>
-            {{{body}}}
-            {{!-- <div id="footer">
-                <p>2022 Olegs Maklecovs</p>
-            </div> --}}
+        <div id="nav">
+            <h1><a href="/" id="nav-title">myJobs</a></h1>
+            <div><a href="/login">Login</a></div>
         </div>
+        {{{body}}}
     </body>
 </html>
