--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,10 @@
-<div id="content-login">
+<main id="login">
     <form action="/login" method="post">
-        <label for="email">Email</label><br>
-        <input type="text" name="email" size="30"><br>
-        <label for="password">Password</label><br>
-        <input type="password" name="password" size="30"><br>
+        <label for="email">Email</label>
+        <input type="text" name="email" size="26">
+        <label for="password">Password</label>
+        <input type="password" name="password" size="26">
         <input type="submit" value="Login">
     </form>
-</div>
+    <a href="/register">Register</a>
+</main>
