--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,5 +6,6 @@
         <input type="password" name="password" size="26">
         <input type="submit" value="Login">
     </form>
-    <a href="/register">Register</a>
+    <a href="/register">Register as job seeker</a>
+    <a href="/register-employer">Register as employer</a>
 </main>
