--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,5 +10,6 @@
             <div><a href="/login">Login</a></div>
         </div>
         {{{body}}}
+        <script src="/javascript/script.js"></script>
     </body>
 </html>
