--- a/views/login_employer.handlebars
+++ b/views/login_employer.handlebars
@@ -1,11 +1,11 @@
 <main id="login">
-    <h3>Login</h3>
-    <form action="/login" method="post">
+    <h3>Employer</h3>
+    <form action="/employer" method="post">
         <label for="email">Email</label>
         <input type="text" name="email" size="26">
         <label for="password">Password</label>
         <input type="password" name="password" size="26">
         <input type="submit" value="Login">
     </form>
-    <a href="/register">Register</a>
+    <a href="/register-employer">Register</a>
 </main>
