--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,6 @@
 <main id="register">
-    <form action="/register-employee" method="post">
+    <h3>Register</h3>
+    <form action="/register" method="post">
         <label for="firstname">First name</label>
         <input type="text" name="firstname" size="26">
         <label for="lastname">Last name</label>
