--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
         <div id="nav">
             <h1><a href="/" id="nav-title">myJobs</a></h1>
             <div><a href="/login">Login</a></div>
+            <div><a href="/employer">Employer</a></div>
         </div>
         {{{body}}}
         <script src="/javascript/script.js"></script>
