--- a/views/register_employer.handlebars
+++ b/views/register_employer.handlebars
@@ -1,4 +1,5 @@
 <main id="register">
+    <h3>Register as employer</h3>
     <form action="/register-employer" method="post">
         <label for="companyname">Company name</label>
         <input type="text" name="companyname" size="26">
