--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,3 +116,24 @@ input[type=text], input[type=password], select {
 #register form *:not(label) {
     margin-bottom: 0.8em;
 }
+
+/* Profile page */
+#profile {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 0.6em;
+}
+#profile aside {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 0.8em;
+    align-content: start;
+}
+#profile form {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: start;
+}
+#profile form *:not(label) {
+    margin-bottom: 0.8em;
+}
