--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -16,7 +16,7 @@
         </div>
         <span>London</span>
         <span>03/01/2022</span>
-    </div class="item">
+    </div>
     <div class="item">
         <div>
             <a href="/job">Warehouse Worker</a><br>
@@ -24,7 +24,7 @@
         </div>
         <span>Manchester</span>
         <span>11/01/2022</span>
-    </div class="item">
+    </div>
     <div class="item">
         <div>
             <a href="/job">Web Designer</a><br>
@@ -32,7 +32,7 @@
         </div>
         <span>Birmingham</span>
         <span>29/01/2022</span>
-    </div class="item">
+    </div>
     <div class="item">
         <div>
             <a href="/job">Cleaner</a><br>
@@ -40,5 +40,5 @@
         </div>
         <span>Leicester</span>
         <span>03/01/2022</span>
-    </div class="item">
+    </div>
 </main>
