--- a/views/applicants.handlebars
+++ b/views/applicants.handlebars
@@ -5,22 +5,22 @@
         <div><a href="/applicants">Applicants</a></div>
     </aside>
     <article class="profile-jobs-list">
-        <h3>Posted jobs</h3>
+        <h3>Applicants</h3>
         <div class="item">
             <div>
-                <a href="/job">Software Developer</a><br>
-                <span class="company">Google</span>
+                <span>John Doe</span><br>
+                <span class="company">Software Developer</span>
             </div>
-            <span>London</span>
+            <a href="/download-cv">CV</a>
             <span>03/01/2022</span>
         </div>
         <div class="item">
             <div>
-                <a href="/job">Warehouse Worker</a><br>
-                <span class="company">Amazon</span>
+                <span>Rick Grimes</span><br>
+                <span class="company">Warehouse Worker</span>
             </div>
-            <span>Manchester</span>
-            <span>11/01/2022</span>
+            <a href="/download-cv">CV</a>
+            <span>03/01/2022</span>
         </div>
     </article>
 </main>
