--- a/views/applicants.handlebars
+++ b/views/applicants.handlebars
@@ -4,8 +4,8 @@
         <div><a href="/posted">Posted jobs</a></div>
         <div><a href="/applicants">Applicants</a></div>
     </aside>
-    <article class="profile-jobs-list">
-        <h3>Applicants</h3>
+    <section class="profile-jobs-list">
+        <h2>Applicants</h2>
         <div class="item">
             <div>
                 <span>John Doe</span><br>
@@ -22,5 +22,5 @@
             <a href="/download-cv">CV</a>
             <span>03/01/2022</span>
         </div>
-    </article>
+    </section>
 </main>
