--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,15 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <title>{{title}}</title>
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <div id="nav">
+        <nav>
             <h1><a href="/" id="nav-title">myJobs</a></h1>
             <div><a href="/login">Login</a></div>
             <div><a href="/employer">Employer</a></div>
-        </div>
+        </nav>
         {{{body}}}
         <script src="/javascript/script.js"></script>
     </body>
