--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,11 +4,11 @@
         <div><a href="/saved">Saved jobs</a></div>
         <div><a href="/applied">Applied jobs</a></div>
     </aside>
-    <article>
-        <h3>Profile</h3>
+    <section>
+        <h2>Profile</h2>
         <p>Name: John Doe</p>
         <p>Email: john@gmail.com</p>
-        <h3>Change password</h3>
+        <h2>Change password</h2>
         <form action="/profile" method="post">
             <label for="password">New password</label>
             <input type="password" name="password" size="26">
@@ -16,5 +16,5 @@
             <input type="password" name="confirmpassword" size="26">
             <input type="submit" value="Submit">
         </form>
-    </article>
+    </section>
 </main>
