--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -4,8 +4,8 @@
         <div><a href="/saved">Saved jobs</a></div>
         <div><a href="/applied">Applied jobs</a></div>
     </aside>
-    <article class="profile-jobs-list">
-        <h3>Saved jobs</h3>
+    <section class="profile-jobs-list">
+        <h2>Saved jobs</h2>
         <div class="item">
             <div>
                 <a href="/job">Software Developer</a><br>
@@ -22,5 +22,5 @@
             <span>Manchester</span>
             <span>11/01/2022</span>
         </div>
-    </article>
+    </section>
 </main>
