--- a/views/job.handlebars
+++ b/views/job.handlebars
@@ -1,18 +1,18 @@
 <main id="job">
     <div>
-        <h3>Job title</h3>
+        <h2>Job title</h2>
         <span class="company">Company Name</span>
     </div>
     <span>02/01/2022</span>
     <span>London</span>
-    <article>
+    <section>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt, unde aperiam harum pariatur quas, et necessitatibus odit facere hic ipsam velit! Ipsam, et. Et vero maiores, reiciendis perspiciatis qui laborum dolores ut commodi. Dolorum laudantium ea quo repellendus illum? Earum.
         </p>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio provident atque libero reprehenderit sit voluptas vitae ad eos! Repellendus, voluptatibus!
         </p>
-    </article>
+    </section>
     <form action="/job" method="post">
         <label for="upload-file">Upload your CV</label><br>
         <input type="file" name="upload-file"><br>
