--- a/src/views/job_form.handlebars
+++ b/src/views/job_form.handlebars
@@ -1,6 +1,6 @@
 <main id="job-form">
-    <h2>Create job posting</h2>
-    <form action="/create" method="post">
+    <h2>{{heading}}</h2>
+    <form action="{{action}}" method="post">
         <label for="title">Title</label>
         <input type="text" name="title">
         <label for="city">City</label>
