--- a/src/views/posted.handlebars
+++ b/src/views/posted.handlebars
@@ -1,8 +1,8 @@
 <main id="profile">
     <aside>
-        <div><a href="/profile-employer">Profile</a></div>
-        <div><a href="/posted">Posted jobs</a></div>
-        <div><a href="/applicants">Applicants</a></div>
+        {{#each links}}
+            <div><a href="{{this.link}}">{{this.text}}</a></div>
+        {{/each}}
     </aside>
     <section class="profile-jobs-list">
         <h2>Posted jobs</h2>
