Login feature now fully working

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,6 @@
 <main id="login">
     <h2>{{heading}}</h2>
+    <span>{{error}}</span>
     <form action="{{action}}" method="post">
         <label for="email">Email</label>
         <input type="text" name="email" size="26">
