--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,7 +1,7 @@
-<main id="index">
+<main class="index">
     <h2>Search for jobs</h2>
-    <form action="/list" method="get">
-        <input type="text" name="job_title" size="50">
+    <form action="/list" method="get" class="search">
+        <input type="text" name="job_title">
         <select name="city">
             <option value="London">London</option>
             <option value="Birmingham">Birmingham</option>
