Login and registration screens redesign

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,11 +1,11 @@
-<main id="login">
+<main class="login">
     <h2>{{heading}}</h2>
     <span>{{error}}</span>
     <form action="{{action}}" method="post">
         <label for="email">Email</label>
-        <input type="text" name="email" size="26">
+        <input type="text" name="email">
         <label for="password">Password</label>
-        <input type="password" name="password" size="26">
+        <input type="password" name="password">
         <input type="submit" value="Login">
     </form>
     <a href="{{register_link}}">Register</a>
