--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,28 +71,34 @@ nav a {
 .index {
     margin: 0.5em 0.5em;
 }
-.search {
+.index form {
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-gap: 0.5em;
 }
-.search input[type="submit"] {
+.index form input[type="submit"] {
     grid-column: 1 / 3;
     justify-self: left;
 }
 
-/* Login form */
-#login {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
+/* Login screen */
+.login {
+    margin: 0 0.5em;
 }
-#login form {
-    display: grid;
-    grid-template-columns: 1fr;
+.login form {
+    display: flex;
+    flex-direction: column;
 }
-#login form *:not(label) {
+.login form *:not(label) {
     margin-bottom: 0.8em;
+}
+.login form input[type="submit"] {
+    margin: auto;
+}
+.login a {
+    display: block;
+    text-align: center;
+    margin-top: 0.8em;
 }
 
 /* Jobs list */
@@ -125,18 +131,18 @@ nav a {
 }
 
 /* Registration screen */
-#register {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 0.8em;
-    justify-items: center;
+.register {
+    margin: 0 0.5em;
 }
-#register form {
-    display: grid;
-    grid-template-columns: 1fr;
+.register form {
+    display: flex;
+    flex-direction: column;
 }
-#register form *:not(label) {
+.register form *:not(label) {
     margin-bottom: 0.8em;
+}
+.register form input[type="submit"] {
+    margin: auto;
 }
 
 /* Profile page */
@@ -180,7 +186,7 @@ nav a {
     margin-bottom: 0.8em;
 }
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 450px) {
     a {
         color: #f70;
         text-decoration: none;
