--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,6 +1,6 @@
 <main class="index">
     <h2>Search for jobs</h2>
-    <form action="/list" method="get" class="search">
+    <form action="/list" method="get">
         <input type="text" name="job_title">
         <select name="city">
             <option value="London">London</option>
