--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,21 +1,21 @@
-<main id="register">
+<main class="register">
     <h2>{{heading}}</h2>
     <form action="{{action}}" method="post">
         {{#if is_employer}}
         <label for="companyname">Company name</label>
-        <input type="text" name="companyname" size="26">
+        <input type="text" name="companyname">
         {{else}}
         <label for="firstname">First name</label>
-        <input type="text" name="firstname" size="26">
+        <input type="text" name="firstname">
         <label for="lastname">Last name</label>
-        <input type="text" name="lastname" size="26">
+        <input type="text" name="lastname">
         {{/if}}
         <label for="email">Email</label>
-        <input type="text" name="email" size="26">
+        <input type="text" name="email">
         <label for="password">Password</label>
-        <input type="password" name="password" size="26">
+        <input type="password" name="password">
         <label for="confirmpassword">Confirm password</label>
-        <input type="password" name="confirmpassword" size="26">
+        <input type="password" name="confirmpassword">
         <input type="submit" value="Register">
     </form>
 </main>
