--- a/src/views/list.handlebars
+++ b/src/views/list.handlebars
@@ -1,44 +1,40 @@
-<main id="list">
-    <form action="/jobs" method="get">
-        <input type="text" name="search-query" size="40">
-        <select name="city">
-            <option value="London">London</option>
-            <option value="Birmingham">Birmingham</option>
-            <option value="Manchester">Manchester</option>
-            <option value="Cambridge">Cambridge</option>
-        </select>
-        <input type="submit" value="Search">
-    </form>
-    <div class="item">
-        <div>
-            <a href="/job">Software Developer</a><br>
-            <span class="company">Google</span>
+<main class="list">
+    <section>
+        <form action="/jobs" method="get">
+            <input type="text" name="search-query" size="40">
+            <select name="city">
+                <option value="London">London</option>
+                <option value="Birmingham">Birmingham</option>
+                <option value="Manchester">Manchester</option>
+                <option value="Cambridge">Cambridge</option>
+            </select>
+            <input type="submit" value="Search">
+        </form>
+    </section>
+    <section class="jobs-list">
+        <div class="job-item">
+            <div class="job-title">
+                <a href="/job">Software Developer</a><br>
+                <span class="company">Google</span>
+            </div>
+            <span class="job-city">London</span>
+            <span class="job-date">03/01/2022</span>
         </div>
-        <span>London</span>
-        <span>03/01/2022</span>
-    </div>
-    <div class="item">
-        <div>
-            <a href="/job">Warehouse Worker</a><br>
-            <span class="company">Amazon</span>
+        <div class="job-item">
+            <div class="job-title">
+                <a href="/job">Software Developer</a><br>
+                <span class="company">Google</span>
+            </div>
+            <span class="job-city">London</span>
+            <span class="job-date">03/01/2022</span>
         </div>
-        <span>Manchester</span>
-        <span>11/01/2022</span>
-    </div>
-    <div class="item">
-        <div>
-            <a href="/job">Web Designer</a><br>
-            <span class="company">Netflix</span>
+        <div class="job-item">
+            <div class="job-title">
+                <a href="/job">Software Developer</a><br>
+                <span class="company">Google</span>
+            </div>
+            <span class="job-city">London</span>
+            <span class="job-date">03/01/2022</span>
         </div>
-        <span>Birmingham</span>
-        <span>29/01/2022</span>
-    </div>
-    <div class="item">
-        <div>
-            <a href="/job">Cleaner</a><br>
-            <span class="company">Midlands Cleaning</span>
-        </div>
-        <span>Leicester</span>
-        <span>03/01/2022</span>
-    </div>
+    </section>
 </main>
