New aside menu on profile page, optimised for mobile screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
 }
 
+footer {
+    margin: 1em 0.5em;
+}
+
 a {
     color: #f70;
 }
@@ -53,6 +57,7 @@ nav {
     display: none;
     margin: 0 0.5em;
     right: 0;
+    z-index: 1;
 }
 nav.open {
     position: absolute;
@@ -89,19 +94,18 @@ nav a {
     margin: 0 0.5em;
 }
 .login form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 .login form *:not(label) {
     margin-bottom: 0.8em;
 }
 .login form input[type="submit"] {
-    margin: auto;
+    justify-self: center;
 }
 .login a {
     display: block;
     text-align: center;
-    margin-top: 0.8em;
 }
 
 /* Jobs list */
@@ -154,14 +158,14 @@ nav a {
 }
 
 /* Job screen */
-#job {
-    display: grid;
-    grid-template-columns: 1fr;
+.job {
+    margin: 0 0.5em;
 }
-#job section {
-    margin-bottom: 1em;
+.job-details {
+    display: flex;
+    flex-direction: column;
 }
-#job input[type=file] {
+.job input[type=file] {
     margin-bottom: 1em;
 }
 
@@ -170,34 +174,65 @@ nav a {
     margin: 0 0.5em;
 }
 .register form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 .register form *:not(label) {
     margin-bottom: 0.8em;
 }
 .register form input[type="submit"] {
-    margin: auto;
+    justify-self: center;
 }
 
 /* Profile page */
-#profile {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 0.6em;
+.profile aside {
+    display: none;
+    border: solid #bbb;
+    border-width: 0 1px 1px 1px;
+    border-radius: 0 0 0.2em 0.2em;
 }
-#profile aside {
+.profile aside a {
+    padding: 1em 0.5em;
+    text-decoration: none;
+}
+.profile aside a:not(.profile aside a:last-child) {
+    border-bottom: 1px solid #bbb;
+}
+.profile aside.open {
+    display: flex;
+    flex-direction: column;
+}
+#aside-toggler {
+    border: 1px solid #bbb;
+    border-radius: 0.2em;
+    padding: 0.5em 0.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #eee;
+}
+#aside-toggler.open {
+    border-radius: 0.2em 0.2em 0 0;
+}
+.arrow {
+    border: solid #bbb;
+    border-width: 2px 2px 0 0;
+    width: 10px;
+    height: 10px;
+    transform: rotate(135deg);
+}
+.profile {
+    margin: 0 0.5em;
+}
+.profile form {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 0.8em;
-    align-content: start;
 }
-#profile form {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: start;
+.profile form input[type="submit"] {
+    justify-self: left;
+    margin: 0;
 }
-#profile form *:not(label) {
+.profile form *:not(label) {
     margin-bottom: 0.8em;
 }
 
