--- a/src/views/job.handlebars
+++ b/src/views/job.handlebars
@@ -1,10 +1,10 @@
-<main id="job">
-    <div>
+<main class="job">
+    <section class="job-details">
         <h2>Job title</h2>
         <span class="company">Company Name</span>
-    </div>
-    <span>02/01/2022</span>
-    <span>London</span>
+        <span>02/01/2022</span>
+        <span>London</span>
+    </section>
     <section>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt, unde aperiam harum pariatur quas, et necessitatibus odit facere hic ipsam velit! Ipsam, et. Et vero maiores, reiciendis perspiciatis qui laborum dolores ut commodi. Dolorum laudantium ea quo repellendus illum? Earum.
