--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -19,6 +19,7 @@
             <a href="/employer">Employer</a>
         </nav>
         {{{body}}}
+        <footer>&copy; Olegs Maklecovs 2022</footer>
         <script src="/javascript/nav.js"></script>
     </body>
 </html>
